@@ -285,10 +285,6 @@ pkl_env_dup_toplevel (pkl_env env)
   pkl_env new;
   int i;
 
-  /* XXX: this should do a deep copy!  But it should not be necessary,
-     provided the destructor in the parser "rewinds" any created
-     frame.  */
-
   assert (pkl_env_toplevel_p (env));
 
   new = pkl_env_new ();
