@@ -740,8 +740,11 @@ pkl_ice (pkl_ast ast,
   pk_puts ("\n");
   pk_printf ("Important information has been dumped in %s.\n",
              tmpfile);
-  /* XXX hyperlink */
-  pk_puts ("Please attach it to a bug report and send it to poke-devel@nongnu.org.\n");
+  pk_puts ("Please attach it to a bug report and send it to");
+  pk_term_hyperlink ("mailto:poke-devel@nongnu.org", NULL);
+  pk_puts (" poke-devel@nongnu.org");
+  pk_term_end_hyperlink ();
+  pk_puts (".\n");
 }
 
 int
