@@ -1,5 +1,12 @@
 2019-12-05  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* src/pkl.c (pkl_ice): Use an hyperlink for the bug report
+	address.
+	* src/pkl-asm.c (pkl_asm_catch): Remove obsolete comment.
+	* src/pkl-env.c (pkl_env_dup_toplevel): Likewise.
+
+2019-12-05  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* src/pkl-insn.def: New instruction ASETO.
 	* src/pvm.jitter (aseto): Define.
 
